Bug 297134 - Filter action "mark as read" doesn't mark as read anymore since 4.8.1
Summary: Filter action "mark as read" doesn't mark as read anymore since 4.8.1
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: filtering (other bugs)
Version First Reported In: 4.8
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-30 19:25 UTC by Alexandre Bonneau
Modified: 2012-06-19 14:41 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.4
Sentry Crash Report:


Attachments
test filter (636 bytes, text/plain)
2012-04-23 16:37 UTC, Graeme Hewson
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexandre Bonneau 2012-03-30 19:25:06 UTC
I have some filter rules that move incoming emails to folders, then mark them as read.
Those filters worked great...until the upgrade from 4.8 to 4.8.1 : the emails are correctly moved, but not marked as read.
Comment 1 Wadlax 2012-04-02 10:44:14 UTC
Gentoo , kmail-4.8.1
Filter rule "Mark as Read" worked in version 4.7.4
Stopped after upgrade to 4.8.1 

Old filter, newly created, automatic or manual filter apply - no luck.
Comment 2 Wadlax 2012-04-09 08:07:35 UTC
Unresolved in 4.8.2

$ kmail -v
Qt: 4.8.1
KDE: 4.8.2 (4.8.2)
KMail: 4.8.2
Comment 3 Alexandre Bonneau 2012-04-09 08:38:37 UTC
I can confirm that it's not resolved in 4.8.2 too, using the kubuntu packages.

$ kmail -v                                                                                                                            
Qt :4.8.0
KDE : 4.8.2 (4.8.2)
KMail : 4.8.2
Comment 4 Paolo Pedroni 2012-04-11 14:49:51 UTC
Same as the others in the thread. Worked in 4.7.4, doesn't work in 4.8.1 and 4.8.2.

$ kmail -v
Qt: 4.7.4
Piattaforma di sviluppo KDE: 4.8.2 (4.8.2)
KMail: 4.8.2
Comment 5 Graeme Hewson 2012-04-23 16:37:37 UTC
Created attachment 70606 [details]
test filter
Comment 6 Graeme Hewson 2012-04-23 16:40:49 UTC
I lost my comment there. :-(

It's not only "mark as read" which isn't working. I used the anti-spam wizard to add Bogofilter, and spam/ham marks aren't being applied.

I created a test filter (attached above) which invokes three actions, and none of these work either. The filter log is:

[17:24:58] Evaluating filter rules: (match all of the following) "<size>" <greater-or-equal> "0"
[17:24:58] 1 = "<size>" <greater-or-equal> "0" ( 6163 )
[17:24:58] Filter rules have matched.
------------------------------
[17:24:58] Applying filter action: Mark As "Spam"
[17:24:58] Applying filter action: Mark As "Important"
[17:24:58] Applying filter action: Add Tag "To Do"
Comment 7 Alexandre Bonneau 2012-04-24 11:34:08 UTC
For information, I don't have any spam application/filter installed.
Comment 8 Luis Silva 2012-04-25 20:57:51 UTC
I can confirm this bug with the latest master.
Comment 9 Yaroslav Sidlovsky 2012-05-04 14:28:00 UTC
*** This bug has been confirmed by popular vote. ***
Comment 10 Laurent Montel 2012-05-09 18:44:17 UTC
Git commit 9e58db8eab3d6c095f03ee9a4bb0ce8345320a5f by Montel Laurent.
Committed on 09/05/2012 at 20:43.
Pushed by mlaurent into branch 'master'.

Fix Bug 297134 - Filter action "mark as read" doesn't mark as read

anymore since 4.8.1
FIXED-IN: 4.8.4

M  +4    -3    mailcommon/filter/filteractionsetstatus.cpp

http://commits.kde.org/kdepim/9e58db8eab3d6c095f03ee9a4bb0ce8345320a5f
Comment 11 Laurent Montel 2012-05-09 18:47:44 UTC
Git commit 33a5c618deb047a3a972b773aea9b08a8350f38f by Montel Laurent.
Committed on 09/05/2012 at 20:47.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 297134 - Filter action "mark as read" doesn't mark as read

anymore since 4.8.1
FIXED-IN: 4.8.4

M  +2    -1    mailcommon/filteraction.cpp

http://commits.kde.org/kdepim/33a5c618deb047a3a972b773aea9b08a8350f38f
Comment 12 Joachim Wilke 2012-05-10 08:38:12 UTC
Great work, thanks!