Fix Bug 297134 - Filter action "mark as read" doesn't mark as read

anymore since 4.8.1
FIXED-IN: 4.8.4
BUG: 297134